<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="7dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/question_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_question_black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/question_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="4dp"
            android:text="@string/question_title_label"
            android:textStyle="bold"
            android:layout_margin="18dp"
            app:layout_constraintLeft_toRightOf="@+id/question_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/question_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="4dp"
            android:padding="4dp"
            android:text="@string/question_title"
            app:layout_constraintLeft_toRightOf="@+id/question_title_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/question_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="Category"
            android:textSize="12dp"
            app:layout_constraintLeft_toLeftOf="@id/question_title_label"
            app:layout_constraintTop_toBottomOf="@id/question_title_label" />

        <TextView
            android:id="@+id/question_created_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:layout_marginRight="16dp"
            android:text="@string/question_created_time"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_title" />

        <View
            android:id="@+id/description_delimiter"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="8dp"
            android:background="#dedddd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question_image" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="4dp"
            android:text="@string/question_description"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_delimiter" />


        <TextView
            android:id="@+id/question_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/question_content"
            app:layout_constraintLeft_toRightOf="@+id/description_label"
            app:layout_constraintTop_toBottomOf="@+id/description_delimiter"
            android:layout_width="wrap_content" />

        <TextView
            android:id="@+id/estimated_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="4dp"
            android:text="@string/estimated_time_lable"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_label" />


        <TextView
            android:id="@+id/estimated_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:text="@string/estimated_time"
            app:layout_constraintLeft_toRightOf="@+id/estimated_time_label"
            app:layout_constraintTop_toBottomOf="@+id/description_label" />

        <TextView
            android:id="@+id/unit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:text=""
            app:layout_constraintLeft_toRightOf="@+id/estimated_time"
            app:layout_constraintTop_toBottomOf="@+id/description_label" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/question_accept_button"
            android:text="Accept"
            app:layout_constraintTop_toBottomOf="@id/description_label"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:layout_marginTop="8dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>